product ui change + minor base

--- a/CLEAR/templates/CLEAR/base.html
+++ b/CLEAR/templates/CLEAR/base.html
@@ -96,6 +96,9 @@
                                 Reports
                             </a>
                         </li>
+                        <li class="nav-item pb-3">
+                            <a href="{% url 'logout' %}">Log Out</a>
+                        </li>
                     </ul>
                 </div>
             </div>
