--- a/CLEAR/templates/CLEAR/base.html
+++ b/CLEAR/templates/CLEAR/base.html
@@ -61,52 +61,51 @@
                 <div>
                     <ul style="list-style-type: none; margin: 0; padding: 0;">
                         <li class="nav-item pb-3" style="border-radius: 50px;">
-                            <a href="{% url 'dashboard' %}"
+                            <a id="navbars" href="{% url 'dashboard' %}"
                                 class="nav-link text-white {% if 'dashboard' in request.path %} active {% endif %}">
                                 Dashboard
                             </a>
                         </li>
                         <li class="nav-item pb-3">
-                            <a href="{% url 'products' %}"
+                            <a id="navbars" href="{% url 'products' %}"
                                 class="nav-link text-white {% if 'products' in request.path %} active {% endif %}">
                                 Products
                             </a>
                         </li>
                         <li class="nav-item pb-3">
-                            <a href="{% url 'orders' %}"
+                            <a id="navbars" href="{% url 'orders' %}"
                                 class="nav-link text-white {% if 'orders' in request.path %} active {% endif %}">
                                 Job Orders
                             </a>
                         </li>
                         <li class="nav-item pb-3">
-                            <a href="{% url 'materials' %}"
+                            <a id="navbars" href="{% url 'materials' %}"
                                 class="nav-link text-white {% if 'materials' in request.path %} active {% endif %}">
                                 Materials
                             </a>
                         </li>
                         <li class="nav-item pb-3">
-                            <a href="{% url 'orders' %}"
+                            <a id="navbars" href="{% url 'orders' %}"
                                 class="nav-link text-white {% if '#' in request.path %} active {% endif %}">
                                 Transactions
                             </a>
                         </li>
                         <li class="nav-item pb-3">
-                            <a href="{% url 'reports' %}"
+                            <a id="navbars" href="{% url 'reports' %}"
                                 class="nav-link text-white {% if 'reports' in request.path %} active {% endif %}">
                                 Reports
                             </a>
                         </li>
-                        <li class="nav-item pb-3">
-                            <a href="{% url 'logout' %}">Log Out</a>
-                        </li>
                     </ul>
                 </div>
+                <button type="button" class="logoutbtn"><a href="{% url 'logout' %}">Log Out</a></button>
             </div>
             <div class="col-10" style="background-color:#EBEBEB;">
                 {% block content %}
                 {% endblock %}
             </div>
         </div>
+            
     </div>
 
     <script>
