--- a/CLEAR/templates/registration/sign_up.html
+++ b/CLEAR/templates/registration/sign_up.html
@@ -1,10 +1,30 @@
 {% load static %} 
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'stylesheet4.css' %}">
+
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="post">
-{% csrf_token %} {{form|crispy}}
-<button type ="submit" class="btn btn-success">Register</button>
-</form>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand mx-auto" href="#">
+            <img src="https://i.imgur.com/RK7hDVV.png" alt="Logo" height="30">
+        </a>
+    </div>
+</nav>
+<div class="container">
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-6">
+            <form method="post">
+            {% csrf_token %} {{form|crispy}}
+            <button type ="submit" class="btn btn-success">Register</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
